deployments/envs/prd/redis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-redis
  labels:
    app: voting-system
    component: redis
    environment: production
